--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.2.1",
-    "server": "file:"
+    "server": "file:",
+    "vercel": "^39.3.0"
   }
 }
