--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server",
-    "build": "prisma generate && next build"
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +17,14 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
-    "prisma": "^6.2.1",
     "server": "file:",
     "vercel": "^39.3.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.2.1"
   }
 }
