--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "rs": "^0.0.1",
     "server": "file:",
     "vercel": "^39.3.0"
   },
