--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "client": "file:",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
   },
